--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 :root {
     --color-slate-900: #1F314F;
     --color-slate-500: #68778D;
     --color-slate-300: #D5E1EF;
     --color-white: #FFFFFF;
 
-    --text-preset-1-font-family: "Outfit", bold;
+    --text-preset-1-font-family: "Outfit", sans-serif;
+    --text-preset-1-font-weight: bold;
     --text-preset-1-font-size: 22px;
     --text-preset-1-line-height: 120%;
     --text-preset-1-letter-spacing: 0px;
-    --text-preset-2-font-family: "Outfit";
+    --text-preset-2-font-family: "Outfit", sans-serif;
+    --text-preset-2-font-weight: normal;
     --text-preset-2-font-size: 15px;
     --text-preset-2-line-height: 140%;
     --text-preset-2-letter-spacing: 0.2px;
@@ -20,6 +28,7 @@
 
 .text-preset-1 {
     font-family: var(--text-preset-1-font-family);
+    font-weight: var(--text-preset-1-font-weight);
     font-size: var(--text-preset-1-font-size);
     line-height: var(--text-preset-1-line-height);
     letter-spacing: var(--text-preset-1-letter-spacing);
@@ -29,6 +38,7 @@
 
 .text-preset-2 {
     font-family: var(--text-preset-2-font-family);
+    font-weight: var(--text-preset-2-font-weight);
     font-size: var(--text-preset-2-font-size);
     line-height: var(--text-preset-2-line-height);
     letter-spacing: var(--text-preset-2-letter-spacing);
@@ -36,6 +46,7 @@
     text-align: center;
 }
 
+/* Desktop */
 body {
     background-color: var(--color-slate-300);
     height: 100vh;
@@ -45,27 +56,27 @@ body {
 }
 
 .container {
-    width: fit-content;
+    width: min-content;
     background-color: var(--color-white);
-    box-sizing: border-box;
+    padding: var(--spacing-200) var(--spacing-200) var(--spacing-500);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    padding: var(--spacing-200) var(--spacing-200) var(--spacing-500);
     gap: var(--spacing-300);
+    box-shadow: 0 4px 4px 0 rgb(0, 0, 0, 0.25);
 }
 
 .container img {
-    border-radius: 10px;
     width: 288px;
     height: 288px;
+    border-radius: 10px;
     flex-shrink: 0;
 }
 
-.text {
-    width: 288px;
+.container .text {
+    weight: 100%;
     box-sizing: border-box;
     padding: 0px var(--spacing-200);
     display: flex;
@@ -87,4 +98,9 @@ body {
     word-break: break-word;
     white-space: normal;
     overflow-wrap: break-word;
+}
+
+/* Mobile */
+@media (max-width: 375) {
+
 }
